# epa

./: .gitignore  README.md  docker-compose.yml  openapi.yml
.github/workflows/: workflow-for-api.yaml
EPAEXPO/: package-lock.json  package.json
api/: .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg
api/.openapi-generator/: FILES
api/src/epa_api/: main.py  security_api.py
api/src/epa_api/api_implementation/: auth.py  main.py
api/src/epa_api/api_implementation/utils/: context.py  google.py  mongo.py  token.py  user.py
api/src/epa_api/apis/: authentication_api.py  authentication_api_base.py  default_api.py  default_api_base.py
api/src/epa_api/models/: apple_token_exchange.py  auth_token.py  login_request.py  status.py  user_created.py  user_registration.py
api/tests/: conftest.py  security_api.py  test_default_api.py
cache_loader/: Dockerfile  README.md  go.mod  main.go  main_test.go  template.yaml
client/: .gitignore  package-lock.json  package.json
client/app/: +not-found.tsx  +not-found.tsx~  about.tsx~  index.tsx~
client/app/(tabs)/: _layout.tsx  _layout.tsx~  about.tsx  index.tsx
database/: config.json  docker-compose.yml  init.py
notify_service/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  samconfig.toml  template.yaml
post_ingestor/: Dockerfile  docker-compose.yml
system_diagram/: event-posting-app.drawio
user_timeline_post_cache/: docker-compose.yml
