[metadata]
name = epa_api
version = 1.0.0
description = API for a mobile safety application that allows users to post and subscribe to local safety concerns. 
long_description = file: README.md
keywords = OpenAPI EPA (Event Posting App) API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
